# iotto

./: CMakeLists.txt
iotto_core/: CMakeLists.txt
iotto_core/include/: iotto_config.h  iotto_err.h  iotto_file_manager.h  iotto_json.h
iotto_core/src/: iotto_file_manager.c
iotto_message/: CMakeLists.txt
iotto_message/include/: iotto_message.h  iotto_message_data.h  iotto_request.h  iotto_response.h
iotto_message/include/hardware/: hardware_config.h  hardware_message.h  tcp_config.h  wifi_config.h
iotto_message/include/info/: hardware_info.h  info_data.h  info_message.h  network_info.h  software_info.h  tcp_info.h  wifi_info.h
iotto_message/include/software/: mqtt_config.h  ntp_config.h  software_config.h  software_message.h
iotto_message/src/: iotto_message.c  iotto_message_data.c  iotto_request.c  iotto_response.c
iotto_message/src/hardware/: hardware_config.c  hardware_message.c  tcp_config.c  wifi_config.c
iotto_message/src/info/: hardware_info.c  info_data.c  info_message.c  network_info.c  software_info.c  tcp_info.c  wifi_info.c
iotto_message/src/software/: mqtt_config.c  ntp_config.c  software_config.c  software_message.c
